============
Next Release
============

New features and bug fixes:

  * Use jsonsl instead of libyajl as our JSON parsing library, parse JSON more
    strictly, fix minor parsing bugs.

=============
Libbson-1.5.0
=============

It is my pleasure to announce Libbson-1.5.0.

New features and bug fixes:

  * New BSON Type, Decimal128 (bson_decimal128_t) along with the following
    new functions and helpers:
    * bson_decimal128_to_string ()
    * bson_decimal128_from_string ()
    * bson_iter_decimal128 ()
    * bson_iter_overwrite_decimal128 ()
    * BSON_ITER_HOLDS_DECIMAL128()
    * bson_append_decimal128 ()
    * BSON_APPEND_DECIMAL128()
    * BCON_DECIMAL128()
    See the documentations for further details.
  * bson_validate and bson_iter_next now validate that BSON boolean values are
    0 or 1. Before, any non-zero value was considered true.
  * bson_append_code_with_scope now preserves the "code with scope" type
    if scope is an empty, non-NULL BSON document.
  * BSON "code" and "code with scope" types are properly translated to and from
    JSON of the form '{"$code": "...", "$scope": {...}}'.
  * bson_json_reader functions now always validate UTF-8.
  * JSON parsing now preserves integer width.
  * bson_strtoll now matches stroll: it detects range errors, and when
    parsing octal it stops at non-octal digits and returns what it parsed
    instead of setting errno.
  * New flag BSON_VALIDATE_EMPTY_KEYS causes bson_validate to fail if a document
    contains zero-length field names.
  * The configure option "--enable-hardening" had had no effect. It is removed
    in favor of system-wide compiler configuration.
  * Additional validation of

Thanks to everyone who contributed to the development of this release.

  * Hannes Magnusson
  * A. Jesse Jiryu Davis
  * Fiona Rowan
  * Brian Samek

Peace,

    A. Jesse Jiryu Davis

Libbson-1.4.1
=============

This release improves the HTML documentation's Makefile.

-- A. Jesse Jiryu Davis


Libbson-1.4.0